--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="${process.env.PUBLIC_URL}/boudha.svg" />
+    <link rel="icon" type="image/svg+xml" href="/boudha.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zen Attitude</title>
   </head>
